--- a/navigation_stack_saved_spot/rrt_connect_path_planning/config/move_base_params.yaml
+++ b/navigation_stack_saved_spot/rrt_connect_path_planning/config/move_base_params.yaml
@@ -1,7 +1,22 @@
+shutdown_costmaps: false
+
+max_planning_retries: 0
+recovery_behavior_enabled: false
+
 controller_frequency: 10.0
-planner_frequency: 5.0
-oscillation_timeout: 10.0
+controller_patience: 3.0
+
+planner_frequency: 0.0 #5.0
+planner_patience: 5.0
+
+oscillation_timeout: 0.0 
 oscillation_distance: 0.2
+
+# local planner - default is trajectory rollout
+base_local_planner: "dwa_local_planner/DWAPlannerROS"
+
+base_global_planner: "navfn/NavfnROS"
+
 
 NavfnROS:
   allow_unknown: true # Specifies whether or not to allow navfn to create plans that traverse unknown space.
